--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -11,10 +12,12 @@
     "ky": "^0.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1"
   },
   "devDependencies": {
     "@types/material-ui": "^0.21.8",
+    "@types/react-router-dom": "^5.1.6",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
