--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "env-cmd": "^10.1.0",
+    "firebase": "^8.2.1",
     "ky": "^0.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
