--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "date-fns": "^2.16.1",
     "env-cmd": "^10.1.0",
     "firebase": "^8.2.1",
     "ky": "^0.25.0",
