--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "env-cmd -f ./.env/development.env react-scripts start",
-    "build": "react-scripts build",
+    "build": "env-cmd -f ./.env/production.env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
